--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
-    /* TEST */
 }
 img{
     width: 100%;
@@ -15,7 +13,6 @@ img{
 body{
     font-family: 'Open Sans',sans-serif;
 }
-
 .clearfix::after{
     content: "";
     display: table;
@@ -23,7 +20,7 @@ body{
 }
 .normal-text{
     font-size: 17px;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 /* Columns */
@@ -73,8 +70,13 @@ a.small-btn:hover, a.big-btn:hover{
 
 /* HEADER */
 header{
+    background-color: white;
     height: 9vh;
     line-height: 9vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 header img{
     height: 27px;
@@ -108,6 +110,10 @@ header a{
     width: 80%;
     margin: auto;
 }
+.small-container{
+    width: 70%;
+    margin: auto;
+}
 .azure-bg{
     background-color: #b4d0e7;
 }
@@ -134,3 +140,39 @@ header a{
     left: 0;
     top: 5px;
 }
+
+
+/* Packets */
+.second-section{
+    margin-top: 10%;
+}
+.secondary-title{
+    font-size: 45px;
+}
+
+/* RadioButtons */
+.rb-container{
+    padding: 50px 0 35px;
+}
+.white-rb{
+    margin-left: 25px;
+}
+.blue-rb::before, .white-rb::before{
+    display: inline-block;
+    content: "";
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    vertical-align: top;
+    margin-right: 5px;
+}
+.blue-rb::before{
+    border: 5px solid #0061ff;
+}
+.white-rb::before{
+    height: 18px;
+    width: 18px;
+    border: 2px solid lightgray;
+}
+
+/* Packets */
